# market-fit

./: .env.example  .gitignore  AGENTS.md  APPLY_AGENT_SERVER_PATCH.sh  Makefile  README.md  TODO.md  docker-compose.mac.yml  docker-compose.yml  llm채팅todo.md  scratch-pad.md
backend/services/agent-service/: .env.example  Dockerfile  README.md  langgraph.eval.json  langgraph.json  pyproject.toml
backend/services/agent-service/docs/: README.md  architecture.md  catalog-api.md  chat-graph.md  evals-and-testing.md  hitl-and-tools.md  local-dev.md  models-and-providers.md  security.md  streaming.md
backend/services/agent-service/docs/locked-2026-06-23/: README.md
backend/services/agent-service/docs/tracked-llm/: 01-getting-started.md  02-folder-structure.md  03-api-contract.md  04-chat-stream-agent-tools-hitl.md  05-rag-qdrant-sources.md  06-security-config.md  07-testing.md  08-development-guide.md  09-agent-evals.md  (+4 more)
backend/services/agent-service/evals/: .gitignore  ATTRIBUTION.md  README.md  __init__.py  config.yaml
backend/services/agent-service/planning/: 01-postgresql-and-persistence.md  02-thread-session-api.md  03-memory-and-context-tools.md  04-onboarding-profile-update-flow.md  05-artifacts-documents-feedback.md  06-design4-frontend-integration.md  README.md
backend/services/agent-service/scripts/: gemini_multimodal_smoke_test.py  inspect_provider_stream_events.py  qdrant_alias_switch.py  qdrant_reindex.py
backend/services/onboarding-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/services/onboarding-service/.sample/: README.md  apartment_hdong.sample.csv  attraction_facilities_hdong.sample.csv  consumption_hdong.sample.csv  estimated_sales_hdong_2025.sample.csv  living_population_hdong_domestic.sample.csv  resident_population_hdong.sample.csv  small_business_activity_by_sector.sample.csv  store_hdong_2025.sample.csv  subway_station_hourly_ridership.sample.csv  user_tower_profiles.sample.jsonl  working_population_hdong.sample.csv
backend/services/onboarding-service/app/: main.py
backend/services/onboarding-service/docs/: api.md  architecture.md  questionnaires.md
backend/services/onboarding-service/tests/: test_api.py  test_category_profile.py  test_item_catalog.py  test_onboarding_category_tower.py  test_onboarding_two_tower.py  test_profile_code.py  test_survey_scoring.py
backend/services/trend-service/: pyproject.toml  requirements.txt
backend/services/trend-service/app/: batch.py  fetch.py  main.py
backend/services/trend-service/tests/: conftest.py  test_backtest.py  test_features.py  test_loader.py
(+899 files in other folders)
