[project]
name = "onboarding-service"
version = "0.1.0"
description = "사용자 온보딩용 투타워 추천 서비스"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiosqlite==0.21.0",
    "fastapi==0.115.6",
    "greenlet==3.2.4",
    "httpx==0.28.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "psycopg[binary]==3.2.12",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.51",
    "tensorflow==2.16.2",
    "tensorflow-recommenders==0.7.3",
    "tf-keras==2.16.0",
    "uvicorn[standard]==0.34.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
